[package]
name = "cocoa-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icrate = { version = "0.0.4", features = [
  "AppKit",
  "AppKit_NSImage",
  "Foundation_NSData",
  "AppKit_NSMenuItem",
  "AppKit_NSImage",
  "AppKit_NSMenu",
  "AppKit_NSEvent",
] }
libc = "0.2.147"
objc2 = "0.4.1"
objc2-foundation = "0.1.1"
once_cell = "1.18.0"
